# CPA_Codex_tools

./: .gitignore  CHANGELOG.md  README.md  codex_quota_checker.py  docker-compose.yml  requirements.txt  test_codex_quota_checker.py
.github/workflows/: web-ci.yml
browser-extension/codex-oauth-auto-login/: README.md  background-batch-core.js  background-core.js  background-flow-utils.js  background-platform-settings.js  background-runtime.js  background.js  content-cpa.js  content-openai.js  manifest.json  sidepanel.css  sidepanel.html  sidepanel.js
browser-extension/codex-oauth-auto-login/tests/: background-batch-core.test.js  background-core.test.js  background-runtime.test.js  (+4 more)
desktop/: README.md  index.html  package-lock.json  package.json  requirements-portable-build.txt  web-server.config.ts
desktop/scripts/: build_portable_release.mjs  build_python_sidecar.py  check_versions.mjs  run_tauri_cli.mjs  sync_versions.mjs  tauri_cli_support.mjs  tauri_cli_support.node-check.mjs  version_support.mjs  version_support.node-check.mjs
desktop/src/: App.test.tsx  App.tsx  layout-scroll.test.ts  styles.css  types.ts  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  build.rs  package-lock.json  package.json  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
docs/: README.md  USER_MANUAL.md
docs/archive/: README.md
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/scripts/: write-runtime-secret.mjs
web/src/: App.test.tsx  App.tsx  layout-scroll.test.ts  main.tsx  styles.css  types.ts
(+79 files in other folders)
