[package]
name = "cpa-quota-desk"
version = "0.1.1"
description = "CPA Codex 配额桌面端"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.1.1", features = [] }
tauri-plugin-opener = "2.5.3"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tempfile = "3"
